make sure the process diagram isn't too close to the edge

--- a/assets/sass/design.scss
+++ b/assets/sass/design.scss
@@ -160,9 +160,7 @@ body {
 .our-process {
   padding: 4em 0 4em 0;
   border-bottom: 1px solid $colour_borders;
-  h2 {
-    text-align: center;
-  }
+  text-align: center;
 }
 
 .meet-the-designers {
